@@ -22,6 +22,7 @@ import org.jspecify.annotations.Nullable;
 import javax.annotation.concurrent.NotThreadSafe;
 import javax.annotation.concurrent.ThreadSafe;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.Optional;
 import java.util.Set;
@@ -49,7 +50,8 @@ public final class McpContentAnnotations {
 	}
 
 	private McpContentAnnotations(@NonNull Builder builder) {
-		this.audience = Set.copyOf(builder.audience);
+		this.audience = Collections.unmodifiableSet(
+				new LinkedHashSet<>(builder.audience));
 		this.priority = builder.priority;
 		this.lastModified = builder.lastModified;
 	}
